Update: Fixed z-index of GetTheApp

--- a/src/components/getTheApp/styles.module.css
+++ b/src/components/getTheApp/styles.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     display: flex;
     justify-content: center;
-    z-index: 99999;
+    z-index: 9;
     bottom: 0;
     left: 0;
     padding: 16px 24px;
